experiment/frontend/frontend-deployment.yaml
apiVersion: v1
kind: Service              
metadata:
  name: frontend-lb
spec:
  type: LoadBalancer       
  ports:
  - port: 80              
    targetPort: 8080        
  selector:            
    app: frontend    
---
apiVersion:  apps/v1 #extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2                                             
  minReadySeconds: 15
  strategy:
    type: RollingUpdate                                   
    rollingUpdate: 
      maxUnavailable: 1                                   
      maxSurge: 1                                         
  selector:
    matchLabels:
      app: frontend
      tier: experiment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
        tier: experiment
    spec:
      containers:
      - image: alessandroargentieri/exp-frontend
        name: frontend
        ports:
        - containerPort: 8080
          name: frontend
