experiment/frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1 #
spec:
  tls:
    - secretName: example-com-tls
      hosts:
        - example.com
  rules:
  - host: example.com
    http:
      paths:
      - path: /javalin-api-gateway
        #pathType: Prefix
        backend:
          serviceName: gateway-lb
          servicePort: 80
      - path: /
        #pathType: Prefix
        backend:
          serviceName: frontend-lb
          servicePort: 80 
      - path: /v2
        #pathType: Prefix        
        backend:
          serviceName: web2
          servicePort: 80 
      - path: /v3
        #pathType: Prefix
        backend:
          serviceName: microservice-lb
          servicePort: 80
      - path: /v4
        #pathType: Prefix
        backend:
          serviceName: micros
          servicePort: 80
